--- a/scratch.ipynb
+++ b/scratch.ipynb
@@ -92,9 +92,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of rows: 100\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -116,7 +123,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>row_id</th>\n",
+       "      <th>problem_id</th>\n",
        "      <th>problem</th>\n",
        "      <th>ground_truth_reasoning</th>\n",
        "      <th>ground_truth_solution</th>\n",
@@ -127,38 +134,53 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>6</td>\n",
-       "      <td>Toulouse has twice as many sheep as Charleston. Charleston has 4 times as many sheep as Seattle. How many sheep do Toulouse, Charleston, and Seattle have together if Seattle has 20 sheep?</td>\n",
-       "      <td>If Seattle has 20 sheep, Charleston has 4 * 20 sheep = &lt;&lt;20*4=80&gt;&gt;80 sheep\\nToulouse has twice as many sheep as Charleston, which is 2 * 80 sheep = &lt;&lt;2*80=160&gt;&gt;160 sheep\\nTogether, the three has 20 sheep + 160 sheep + 80 sheep = &lt;&lt;20+160+80=260&gt;&gt;260 sheep</td>\n",
-       "      <td>260</td>\n",
-       "      <td>Let's break down the problem step by step:\\n\\n1. **Seattle's Sheep:**\\n   - Seattle has **20** sheep.\\n\\n2. **Charleston's Sheep:**\\n   - Charleston has 4 times as many sheep as Seattle.\\n   - Therefore, Charleston has \\( 4 \\times 20 = 80 \\) sheep.\\n\\n3. **Toulouse's Sheep:**\\n   - Toulouse has twice as many</td>\n",
-       "      <td>Let's break down the problem step by step:\\n\\n1. **Seattle's Sheep:**\\n   - Seattle has **20** sheep.\\n\\n2. **Charleston's Sheep:**\\n   - Charleston has 4 times as many sheep as Seattle.\\n   - Therefore, Charleston has \\( 4 \\div 20 = 0.2 \\) sheep.\\n\\n3. **Toulouse's Sheep:**\\n   - Toulouse has twice as many</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Janet’s ducks lay 16 eggs per day. She eats three for breakfast every morning and bakes muffins for her friends every day with four. She sells the remainder at the farmers' market daily for $2 per fresh duck egg. How much in dollars does she make every day at the farmers' market?</td>\n",
+       "      <td>Janet sells 16 - 3 - 4 = &lt;&lt;16-3-4=9&gt;&gt;9 duck eggs a day.\\nShe makes 9 * 2 = $&lt;&lt;9*2=18&gt;&gt;18 every day at the farmer’s market.</td>\n",
+       "      <td>18</td>\n",
+       "      <td>To determine how much Janet makes every day at the farmers' market, we need to follow these steps:\\n\\n1. **Calculate the total number of eggs laid per day:**\\n   - Janet’s ducks lay 16 eggs per day.\\n\\n2. **Determine the number of eggs used for breakfast and baking:**\\n   - Janet eats 3 eggs for breakfast.\\n   - She bakes muffins with 4 eggs.\\n   - Total eggs used for breakfast and</td>\n",
+       "      <td>To determine how much Janet makes every day at the farmers' market, we need to follow these steps:\\n\\n1. **Calculate the total number of eggs laid per day:**\\n   - Janet’s ducks lay 16 eggs per day.\\n\\n2. **Determine the number of eggs used for breakfast and baking:**\\n   - Janet eats 3 eggs for breakfast.\\n   - She bakes muffins with 5 eggs.\\n   - Total eggs used for breakfast and</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>A robe takes 2 bolts of blue fiber and half that much white fiber.  How many bolts in total does it take?</td>\n",
+       "      <td>It takes 2/2=&lt;&lt;2/2=1&gt;&gt;1 bolt of white fiber\\nSo the total amount of fabric is 2+1=&lt;&lt;2+1=3&gt;&gt;3 bolts of fabric</td>\n",
+       "      <td>3</td>\n",
+       "      <td>To solve the problem, let's break it down step by step:\\n\\n1. **Determine the amount of blue fiber needed:**\\n   - The robe takes **2 bolts of blue fiber**.\\n\\n2. **Determine the amount of white fiber needed:**\\n   - The robe takes **half the amount of blue fiber** for white fiber.\\n   - Since the robe takes 2 bolts of blue fiber, half of that is:\\n     \\[\\n     \\frac</td>\n",
+       "      <td>To solve the problem, let's break it down step by step:\\n\\n1. **Determine the amount of blue fiber needed:**\\n   - The robe takes **3 bolts of blue fiber**.\\n\\n2. **Determine the amount of white fiber needed:**\\n   - The robe takes **half the amount of blue fiber** for white fiber.\\n   - Since the robe takes 3 bolts of blue fiber, half of that is:\\n     \\[\\n     \\frac</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   row_id  \\\n",
-       "0       6   \n",
+       "   problem_id  \\\n",
+       "0           0   \n",
+       "1           1   \n",
        "\n",
-       "                                                                                                                                                                                       problem  \\\n",
-       "0  Toulouse has twice as many sheep as Charleston. Charleston has 4 times as many sheep as Seattle. How many sheep do Toulouse, Charleston, and Seattle have together if Seattle has 20 sheep?   \n",
+       "                                                                                                                                                                                                                                                                                    problem  \\\n",
+       "0  Janet’s ducks lay 16 eggs per day. She eats three for breakfast every morning and bakes muffins for her friends every day with four. She sells the remainder at the farmers' market daily for $2 per fresh duck egg. How much in dollars does she make every day at the farmers' market?   \n",
+       "1                                                                                                                                                                                 A robe takes 2 bolts of blue fiber and half that much white fiber.  How many bolts in total does it take?   \n",
        "\n",
-       "                                                                                                                                                                                                                                            ground_truth_reasoning  \\\n",
-       "0  If Seattle has 20 sheep, Charleston has 4 * 20 sheep = <<20*4=80>>80 sheep\\nToulouse has twice as many sheep as Charleston, which is 2 * 80 sheep = <<2*80=160>>160 sheep\\nTogether, the three has 20 sheep + 160 sheep + 80 sheep = <<20+160+80=260>>260 sheep   \n",
+       "                                                                                                       ground_truth_reasoning  \\\n",
+       "0  Janet sells 16 - 3 - 4 = <<16-3-4=9>>9 duck eggs a day.\\nShe makes 9 * 2 = $<<9*2=18>>18 every day at the farmer’s market.   \n",
+       "1                It takes 2/2=<<2/2=1>>1 bolt of white fiber\\nSo the total amount of fabric is 2+1=<<2+1=3>>3 bolts of fabric   \n",
        "\n",
        "   ground_truth_solution  \\\n",
-       "0                    260   \n",
+       "0                     18   \n",
+       "1                      3   \n",
        "\n",
-       "                                                                                                                                                                                                                                                                                                                    stub  \\\n",
-       "0  Let's break down the problem step by step:\\n\\n1. **Seattle's Sheep:**\\n   - Seattle has **20** sheep.\\n\\n2. **Charleston's Sheep:**\\n   - Charleston has 4 times as many sheep as Seattle.\\n   - Therefore, Charleston has \\( 4 \\times 20 = 80 \\) sheep.\\n\\n3. **Toulouse's Sheep:**\\n   - Toulouse has twice as many   \n",
+       "                                                                                                                                                                                                                                                                                                                                                                                               stub  \\\n",
+       "0  To determine how much Janet makes every day at the farmers' market, we need to follow these steps:\\n\\n1. **Calculate the total number of eggs laid per day:**\\n   - Janet’s ducks lay 16 eggs per day.\\n\\n2. **Determine the number of eggs used for breakfast and baking:**\\n   - Janet eats 3 eggs for breakfast.\\n   - She bakes muffins with 4 eggs.\\n   - Total eggs used for breakfast and   \n",
+       "1                To solve the problem, let's break it down step by step:\\n\\n1. **Determine the amount of blue fiber needed:**\\n   - The robe takes **2 bolts of blue fiber**.\\n\\n2. **Determine the amount of white fiber needed:**\\n   - The robe takes **half the amount of blue fiber** for white fiber.\\n   - Since the robe takes 2 bolts of blue fiber, half of that is:\\n     \\[\\n     \\frac   \n",
        "\n",
-       "                                                                                                                                                                                                                                                                                                      perturbed_stub_lm  \n",
-       "0  Let's break down the problem step by step:\\n\\n1. **Seattle's Sheep:**\\n   - Seattle has **20** sheep.\\n\\n2. **Charleston's Sheep:**\\n   - Charleston has 4 times as many sheep as Seattle.\\n   - Therefore, Charleston has \\( 4 \\div 20 = 0.2 \\) sheep.\\n\\n3. **Toulouse's Sheep:**\\n   - Toulouse has twice as many  "
+       "                                                                                                                                                                                                                                                                                                                                                                                  perturbed_stub_lm  \n",
+       "0  To determine how much Janet makes every day at the farmers' market, we need to follow these steps:\\n\\n1. **Calculate the total number of eggs laid per day:**\\n   - Janet’s ducks lay 16 eggs per day.\\n\\n2. **Determine the number of eggs used for breakfast and baking:**\\n   - Janet eats 3 eggs for breakfast.\\n   - She bakes muffins with 5 eggs.\\n   - Total eggs used for breakfast and  \n",
+       "1                To solve the problem, let's break it down step by step:\\n\\n1. **Determine the amount of blue fiber needed:**\\n   - The robe takes **3 bolts of blue fiber**.\\n\\n2. **Determine the amount of white fiber needed:**\\n   - The robe takes **half the amount of blue fiber** for white fiber.\\n   - Since the robe takes 3 bolts of blue fiber, half of that is:\\n     \\[\\n     \\frac  "
       ]
      },
-     "execution_count": 23,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -166,7 +188,8 @@
    "source": [
     "# GSM STUBS AND PERTURBATIONS\n",
     "df = pd.read_csv(\"gsm8k/datasets/gsm8k_stubs_and_perturbations_off_policy.csv\")\n",
-    "df.head(1)"
+    "print(f\"Number of rows: {len(df)}\")\n",
+    "df.head(2)"
    ]
   },
   {
