--- a/gsm8k/scratch.ipynb
+++ b/gsm8k/scratch.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -169,7 +169,7 @@
        "4  To determine Josh's profit, we need to calcula...  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -182,10 +182,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loaded 2 rows\n",
+      "Index(['model', 'provider', 'problem_id', 'problem', 'answer', 'stub',\n",
+      "       'perturbed_stub_lm', 'perturbed_stub_lm_completion',\n",
+      "       'perturbed_stub_lm_solution_verified'],\n",
+      "      dtype='object')\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "completion_df_off_policy = pd.read_csv(\"datasets/gsm8k_completions_off_policy.csv\")\n",
+    "print(f\"Loaded {len(completion_df_off_policy)} rows\")\n",
+    "completion_df_off_policy.head()\n",
+    "print(completion_df_off_policy.columns)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loaded 60 rows\n",
+      "Index(['problem_id', 'problem', 'answer', 'stub_model', 'stub_model_provider',\n",
+      "       'perturb_model', 'perturb_model_provider', 'stub', 'perturbed_stub',\n",
+      "       'completer_model', 'completer_model_provider', 'completion',\n",
+      "       'verifier_model', 'verifier_model_provider', 'verification'],\n",
+      "      dtype='object')\n"
+     ]
+    }
+   ],
+   "source": [
+    "completion_df_on_policy = pd.read_csv(\"datasets/gsm8k_completions_on_policy.csv\")\n",
+    "print(f\"Loaded {len(completion_df_on_policy)} rows\")\n",
+    "completion_df_on_policy.head()\n",
+    "print(completion_df_on_policy.columns)"
+   ]
   }
  ],
  "metadata": {
