--- a/gsm8k/scratch.ipynb
+++ b/gsm8k/scratch.ipynb
@@ -182,17 +182,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loaded 2 rows\n",
-      "Index(['model', 'provider', 'problem_id', 'problem', 'answer', 'stub',\n",
-      "       'perturbed_stub_lm', 'perturbed_stub_lm_completion',\n",
-      "       'perturbed_stub_lm_solution_verified'],\n",
+      "Loaded 10 rows\n",
+      "Index(['problem_id', 'problem', 'answer', 'stub_and_perturb_model',\n",
+      "       'stub_and_perturb_model_provider', 'stub', 'completion_model',\n",
+      "       'completion_model_provider', 'perturbed_stub_lm',\n",
+      "       'perturbed_stub_lm_completion', 'perturbed_stub_lm_solution_verified'],\n",
       "      dtype='object')\n"
      ]
     }
@@ -207,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
