fuck -- switch provider of nemo to deepinfra -- rerun everyhing!

--- a/gsm8k/scratch.ipynb
+++ b/gsm8k/scratch.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -21,13 +21,126 @@
        "'/home/sam/code/cohere/cohere-reasoning-v5/gsm8k'"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "os.getcwd()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>problem_id</th>\n",
+       "      <th>problem</th>\n",
+       "      <th>answer</th>\n",
+       "      <th>stub</th>\n",
+       "      <th>stub_and_perturb_model</th>\n",
+       "      <th>stub_and_perturb_model_provider</th>\n",
+       "      <th>completion_model</th>\n",
+       "      <th>completion_model_provider</th>\n",
+       "      <th>perturbed_stub_lm</th>\n",
+       "      <th>perturbed_stub_lm_completion</th>\n",
+       "      <th>perturbed_stub_lm_solution_verified</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>Janet’s ducks lay 16 eggs per day. She eats th...</td>\n",
+       "      <td>18</td>\n",
+       "      <td>To determine how much Janet makes every day at...</td>\n",
+       "      <td>deepseek/deepseek-chat</td>\n",
+       "      <td>DeepSeek</td>\n",
+       "      <td>command-r7b-12-2024</td>\n",
+       "      <td>Cohere</td>\n",
+       "      <td>To determine how much Janet makes every day at...</td>\n",
+       "      <td>:** 4\\n   \\[\\n   \\text{Total eggs used} = 3 + ...</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   problem_id                                            problem answer  \\\n",
+       "0           0  Janet’s ducks lay 16 eggs per day. She eats th...     18   \n",
+       "\n",
+       "                                                stub  stub_and_perturb_model  \\\n",
+       "0  To determine how much Janet makes every day at...  deepseek/deepseek-chat   \n",
+       "\n",
+       "  stub_and_perturb_model_provider     completion_model  \\\n",
+       "0                        DeepSeek  command-r7b-12-2024   \n",
+       "\n",
+       "  completion_model_provider  \\\n",
+       "0                    Cohere   \n",
+       "\n",
+       "                                   perturbed_stub_lm  \\\n",
+       "0  To determine how much Janet makes every day at...   \n",
+       "\n",
+       "                        perturbed_stub_lm_completion  \\\n",
+       "0  :** 4\\n   \\[\\n   \\text{Total eggs used} = 3 + ...   \n",
+       "\n",
+       "   perturbed_stub_lm_solution_verified  \n",
+       "0                                False  "
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = pd.read_csv(\"datasets/gsm8k_completions_off_policy.csv\")\n",
+    "df.head(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['command-r7b-12-2024', 'google/gemma-2-27b-it',\n",
+       "       'meta-llama/llama-3.3-70b-instruct', 'qwen/qwen-2.5-72b-instruct',\n",
+       "       'qwen/qwq-32b-preview'], dtype=object)"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[\"completion_model\"].unique()"
    ]
   },
   {
