--- a/downloaders/scratch.ipynb
+++ b/downloaders/scratch.ipynb
@@ -13,16 +13,307 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loaded 1319 rows for GSM8k\n",
+      "Loaded 5000 rows for GSM-Symbolic\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>question</th>\n",
+       "      <th>answer</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Janet’s ducks lay 16 eggs per day. She eats th...</td>\n",
+       "      <td>Janet sells 16 - 3 - 4 = &lt;&lt;16-3-4=9&gt;&gt;9 duck eg...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                            question  \\\n",
+       "0  Janet’s ducks lay 16 eggs per day. She eats th...   \n",
+       "\n",
+       "                                              answer  \n",
+       "0  Janet sells 16 - 3 - 4 = <<16-3-4=9>>9 duck eg...  "
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "gsm_df = pd.DataFrame(load_dataset(\"openai/gsm8k\", \"main\")[\"test\"])\n",
+    "print(f\"Loaded {len(gsm_df)} rows for GSM8k\")\n",
+    "\n",
+    "gsm_symbolic_df = pd.DataFrame(load_dataset(\"apple/GSM-Symbolic\", \"main\")[\"test\"])\n",
+    "print(f\"Loaded {len(gsm_symbolic_df)} rows for GSM-Symbolic\")\n",
+    "\n",
+    "gsm_df.head(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Filtered to 100 rows for GSM-Symbolic\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>instance</th>\n",
+       "      <th>question</th>\n",
+       "      <th>answer</th>\n",
+       "      <th>original_id</th>\n",
+       "      <th>original_question</th>\n",
+       "      <th>original_answer</th>\n",
+       "      <th>canary</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Rania saw a 210-foot whale with 7 72-inch remo...</td>\n",
+       "      <td>First, find the combined length of the remoras...</td>\n",
+       "      <td>473</td>\n",
+       "      <td>Benny saw a 10-foot shark with 2 6-inch remora...</td>\n",
+       "      <td>First, find the combined length of the remoras...</td>\n",
+       "      <td>This document should not appear in training co...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   id  instance                                           question  \\\n",
+       "0   0         0  Rania saw a 210-foot whale with 7 72-inch remo...   \n",
+       "\n",
+       "                                              answer  original_id  \\\n",
+       "0  First, find the combined length of the remoras...          473   \n",
+       "\n",
+       "                                   original_question  \\\n",
+       "0  Benny saw a 10-foot shark with 2 6-inch remora...   \n",
+       "\n",
+       "                                     original_answer  \\\n",
+       "0  First, find the combined length of the remoras...   \n",
+       "\n",
+       "                                              canary  \n",
+       "0  This document should not appear in training co...  "
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "gsm_df = gsm_symbolic_df[gsm_symbolic_df[\"instance\"] == 0]\n",
+    "print(f\"Filtered to {len(gsm_df)} rows for GSM-Symbolic\")\n",
+    "gsm_df.head(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Filtered to 100 rows for GSM8k\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>question</th>\n",
+       "      <th>answer</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>Toula went to the bakery and bought various ty...</td>\n",
+       "      <td>The total charge for the doughnuts was 3 x $68...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                             question  \\\n",
+       "11  Toula went to the bakery and bought various ty...   \n",
+       "\n",
+       "                                               answer  \n",
+       "11  The total charge for the doughnuts was 3 x $68...  "
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "gsm_symbolic_questions = set(gsm_symbolic_df[\"original_question\"])\n",
+    "\n",
+    "filtered_gsm_df = gsm_df[gsm_df[\"question\"].isin(gsm_symbolic_questions)]\n",
+    "print(f\"Filtered to {len(filtered_gsm_df)} rows for GSM8k\")\n",
+    "filtered_gsm_df.head(1)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "gsm_df = pd.DataFrame(load_dataset(\"openai/gsm8k\", \"main\")[\"test\"])\n",
-    "gsm_symbolic_df = pd.DataFrame(load_dataset(\"apple/GSM-Symbolic\", \"main\")[\"test\"])\n",
-    "\n",
-    "\n",
-    "gsm_symbolic_df.to_csv(\"datasets/original/gsm-symbolic.csv\", index=False)\n",
-    "print(f\"Saved to CSV at datasets/original/gsm-symbolic.csv\")\n"
+    "# Save the filtered GSM8k dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>problem_id</th>\n",
+       "      <th>problem</th>\n",
+       "      <th>reasoning</th>\n",
+       "      <th>solution</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>Toula went to the bakery and bought various ty...</td>\n",
+       "      <td>The total charge for the doughnuts was 3 x $68...</td>\n",
+       "      <td>694</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   problem_id                                            problem  \\\n",
+       "0           0  Toula went to the bakery and bought various ty...   \n",
+       "\n",
+       "                                           reasoning  solution  \n",
+       "0  The total charge for the doughnuts was 3 x $68...       694  "
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = pd.read_csv(\"../datasets/original/gsm8k_matched_gsm_symbolic.csv\")\n",
+    "df.head(1)"
    ]
   }
  ],
