--- a/gsm8k/downloaders/scratch.ipynb
+++ b/gsm8k/downloaders/scratch.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -60,38 +60,48 @@
        "      <th>problem_id</th>\n",
        "      <th>problem</th>\n",
        "      <th>answer</th>\n",
+       "      <th>subject</th>\n",
+       "      <th>level</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>0</td>\n",
-       "      <td>Toula went to the bakery and bought various ty...</td>\n",
-       "      <td>694</td>\n",
+       "      <td>Convert the point $(0,3)$ in rectangular coord...</td>\n",
+       "      <td>\\left( 3, \\frac{\\pi}{2} \\right)</td>\n",
+       "      <td>Precalculus</td>\n",
+       "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>1</td>\n",
-       "      <td>I have 10 liters of orange drink that are two-...</td>\n",
-       "      <td>15</td>\n",
+       "      <td>Define\\n\\[p = \\sum_{k = 1}^\\infty \\frac{1}{k^2...</td>\n",
+       "      <td>p - q</td>\n",
+       "      <td>Intermediate Algebra</td>\n",
+       "      <td>5</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   problem_id                                            problem  answer\n",
-       "0           0  Toula went to the bakery and bought various ty...     694\n",
-       "1           1  I have 10 liters of orange drink that are two-...      15"
+       "   problem_id                                            problem  \\\n",
+       "0           0  Convert the point $(0,3)$ in rectangular coord...   \n",
+       "1           1  Define\\n\\[p = \\sum_{k = 1}^\\infty \\frac{1}{k^2...   \n",
+       "\n",
+       "                            answer               subject  level  \n",
+       "0  \\left( 3, \\frac{\\pi}{2} \\right)           Precalculus      2  \n",
+       "1                            p - q  Intermediate Algebra      5  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df = pd.read_csv(\"../datasets/original/gsm-symbolic.csv\")\n",
+    "df = pd.read_csv(\"../datasets/original/math_limited.csv\")\n",
     "df.head(2)"
    ]
   },
