switch to l3.1 405b and restart

--- a/gsm8k/scratch.ipynb
+++ b/gsm8k/scratch.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -21,13 +21,54 @@
        "'/home/sam/code/cohere/cohere-reasoning-v5/gsm8k'"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "os.getcwd()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "To determine how much Janet makes every day at the farmers' market, we need to follow these steps:\n",
+      "\n",
+      "1. Calculate the total number of eggs laid by the ducks per day.\n",
+      "2. Subtract the number of eggs Janet eats and uses for muffins.\n",
+      "3. Determine the number of eggs left to sell.\n",
+      "4. Multiply the number of eggs left by the price per egg.\n",
+      "\n",
+      "Let's go through each step:\n",
+      "\n",
+      "1. **Total number of eggs laid per\n",
+      "------\n",
+      "To determine how much Janet makes every day at the farmers' market, we need to follow these steps:\n",
+      "\n",
+      "1. Calculate the total number of eggs laid by the ducks per day.\n",
+      "2. Add the number of eggs Janet eats and uses for muffins.\n",
+      "3. Determine the number of eggs left to sell.\n",
+      "4. Multiply the number of eggs left by the price per egg.\n",
+      "\n",
+      "Let's go through each step:\n",
+      "\n",
+      "1. **Total number of eggs laid per\n"
+     ]
+    }
+   ],
+   "source": [
+    "df = pd.read_csv(\"datasets/gsm8k_stubs_and_perturbations_on_policy.csv\")\n",
+    "df.head(1)\n",
+    "print(df.iloc[0][\"stub\"])\n",
+    "print(\"------\")\n",
+    "print(df.iloc[0][\"perturbed_stub_lm\"])\n"
    ]
   },
   {
