fixed bugs, rerunning completions off and on

--- a/gsm8k/scratch.ipynb
+++ b/gsm8k/scratch.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
        "'/home/sam/code/cohere/cohere-reasoning-v5/gsm8k'"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -32,43 +32,105 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_csv(\"datasets/gsm8k_stubs_and_perturbations_on_policy\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "To determine how much Janet makes every day at the farmers' market, we need to follow these steps:\n",
-      "\n",
-      "1. Calculate the total number of eggs laid by the ducks per day.\n",
-      "2. Subtract the number of eggs Janet eats and uses for muffins.\n",
-      "3. Determine the number of eggs left to sell.\n",
-      "4. Multiply the number of eggs left by the price per egg.\n",
-      "\n",
-      "Let's go through each step:\n",
-      "\n",
-      "1. **Total number of eggs laid per\n",
-      "------\n",
-      "To determine how much Janet makes every day at the farmers' market, we need to follow these steps:\n",
-      "\n",
-      "1. Calculate the total number of eggs laid by the ducks per day.\n",
-      "2. Add the number of eggs Janet eats and uses for muffins.\n",
-      "3. Determine the number of eggs left to sell.\n",
-      "4. Multiply the number of eggs left by the price per egg.\n",
-      "\n",
-      "Let's go through each step:\n",
-      "\n",
-      "1. **Total number of eggs laid per\n"
+      "Loaded 7914 rows\n"
      ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>problem_id</th>\n",
+       "      <th>problem</th>\n",
+       "      <th>answer</th>\n",
+       "      <th>stub_model</th>\n",
+       "      <th>stub_model_provider</th>\n",
+       "      <th>perturb_model</th>\n",
+       "      <th>perturb_model_provider</th>\n",
+       "      <th>stub</th>\n",
+       "      <th>perturbed_stub_lm</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>Janet’s ducks lay 16 eggs per day. She eats th...</td>\n",
+       "      <td>18</td>\n",
+       "      <td>command-r7b-12-2024</td>\n",
+       "      <td>Cohere</td>\n",
+       "      <td>meta-llama/llama-3.1-405b-instruct</td>\n",
+       "      <td>DeepInfra</td>\n",
+       "      <td>To determine how much Janet makes every day at...</td>\n",
+       "      <td>To determine how much Janet makes every day at...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   problem_id                                            problem answer  \\\n",
+       "0           0  Janet’s ducks lay 16 eggs per day. She eats th...     18   \n",
+       "\n",
+       "            stub_model stub_model_provider  \\\n",
+       "0  command-r7b-12-2024              Cohere   \n",
+       "\n",
+       "                        perturb_model perturb_model_provider  \\\n",
+       "0  meta-llama/llama-3.1-405b-instruct              DeepInfra   \n",
+       "\n",
+       "                                                stub  \\\n",
+       "0  To determine how much Janet makes every day at...   \n",
+       "\n",
+       "                                   perturbed_stub_lm  \n",
+       "0  To determine how much Janet makes every day at...  "
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "df = pd.read_csv(\"datasets/gsm8k_stubs_and_perturbations_on_policy.csv\")\n",
+    "print(f\"Loaded {len(df)} rows\")\n",
+    "print(\"\")\n",
     "df.head(1)\n",
-    "print(df.iloc[0][\"stub\"])\n",
-    "print(\"------\")\n",
-    "print(df.iloc[0][\"perturbed_stub_lm\"])\n"
+    "\n",
+    "# print(df.iloc[0][\"stub\"])\n",
+    "# print(\"------\")\n",
+    "# print(df.iloc[0][\"perturbed_stub_lm\"])\n"
    ]
   },
   {
